# afenda-hybrid

./: .dockerignore  .env.example  .gitignore  .lintstagedrc  .prettierignore  AGENTS.md  CONTRIBUTING.md  ENVIRONMENT_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_REPORT.md  docker-compose.test.yml  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.db.config.ts
.cursor/: CORE_SCHEMA_IMPROVEMENTS.md  CORE_SCHEMA_SYNC_REPORT.md  SHARED_COLUMNS_CI_GATE.md  WARNINGS_RESOLUTION_REPORT.md
.github/: CODEOWNERS  pull_request_template.md
.husky/: pre-commit
docs/: BLOCKER_RESOLUTION_SUMMARY.md  CI_GATES.md  CI_GATE_QUICK_REFERENCE.md  CUSTOM_SQL_FILES_VALIDATION.md  DOCUMENTATION_CLEANUP_PLAN.md  EXECUTIVE_SUMMARY_CI_GATES.md  FRONTEND_IMPLEMENTATION.md  HEALTH_AUDIT_FIXES.md  HR_REPORTING_POLICY.md  QUICK_START.md  README.md  SCHEMA_LOCKDOWN.md  ci-gate-analysis.md  ci-gate-improvements-summary.md  hr-data-dictionary.md  hr-lifecycle-onboarding-offboarding.md  hr-schema-audit-matrix.md  recruitment-candidate-databank.md  (+10 more)
tools/react-governance/: README.md  pyproject.toml
tools/react-governance/src/react_governance/: __init__.py  __main__.py  cli.py  context.py  engine.py  gitutil.py  models.py  normalize.py  registry.py  scanner.py
tools/react-governance/src/react_governance/rules/: __init__.py  base.py  imports_relative.py  layers.py
tools/react-governance/tests/: test_engine_json_contract.py  test_gitutil.py  test_normalize.py  test_rules.py
(+764 files in other folders)
