[project]
name = "react-governance"
version = "0.1.0"
description = "AFENDA monorepo React/UI package-layer governance CLI (read-only checks)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
